--- a/layout.html
+++ b/layout.html
@@ -64,11 +64,11 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5 " >
             <div class="d-flex py-5  ">
                 <div class="col-xl-12 col-md-12 col-lg-12 py-5">
                     <div class="row py-5">
-                            <div class="col-lg-6 py-5">
+                            <div class="col-lg-6 py-5" >
                                 <div class="py-4  text-center">
                                 <div data-aos="fade-down" data-aos-delay="90">
                                   <div class="intro_text">
@@ -96,7 +96,7 @@
     </header>
    
     <section>
-      <article class="mt-3 py-5 container" id="service">
+      <article class="mt-3 py-5 container" id="service" data-aos="fade-up">
 
            <div class="titre_service text-center">
                 <p class="h5">
@@ -108,7 +108,7 @@
            </div>
 
            <div class="row mt-5 py-5  justify-content-center">
-               <div class="col-md-4 mb-2">
+               <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="400">
                     <div class="box blue text-center">
                          <p class="icon">here icon</p>
                              <h3  class="titre_box">Titre here</h3>
@@ -116,7 +116,7 @@
                     </div>
                </div>
 
-               <div class="col-md-4 mb-2">
+               <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="500">
                 <div class="box orange text-center">
                      <p class="icon">here icon</p>
                          <h3  class="titre_box">Titre here</h3>
@@ -124,7 +124,7 @@
                 </div>
              </div>
 
-           <div class="col-md-4 mb-2">
+           <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="600">
             <div class="box green text-center">
                  <p class="icon">here icon</p>
                      <h3  class="titre_box">Titre here</h3>
@@ -132,7 +132,7 @@
             </div>
          </div>
 
-         <div class="col-md-4 mb-2">
+         <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="700">
             <div class="box red text-center">
                  <p class="icon">here icon</p>
                      <h3  class="titre_box">Titre here</h3>
@@ -140,7 +140,7 @@
             </div>
          </div>
 
-         <div class="col-md-4 mb-2">
+         <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="800">
             <div class="box purpel text-center">
                  <p class="icon">here icon</p>
                      <h3  class="titre_box">Titre here</h3>
