--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,10 @@
     <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="/assets/css/bootstrap.min.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <title>BIZO</title>
@@ -96,7 +99,7 @@
         </div>    
     </header>
    
-    <section class="mb-5">
+    <section class="mb-4">
       <article class="mt-3 py-5 container" id="service" data-aos="fade-up">
 
            <div class="titre_service text-center">
@@ -145,7 +148,7 @@
             </div>
          </div>
 
-         <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="700">
+         <div class="col-md-4 mb-1" data-aos="fade-right" data-aos-delay="700">
             <div class="box red text-center">
                      <p class="icon">
                         <span class="fa-stack fa-2x">
@@ -158,7 +161,7 @@
             </div>
          </div>
 
-         <div class="col-md-4 mb-2" data-aos="fade-right" data-aos-delay="800">
+         <div class="col-md-4 mb-1" data-aos="fade-right" data-aos-delay="800">
             <div class="box purpel text-center">
                      <p class="icon">
                         <span class="fa-stack fa-2x">
@@ -170,6 +173,47 @@
             </div>
          </div>
            </div>
+      </article>
+
+      <article  id="counter">
+        <div class="row container-fluid d-flex justify-content-center">
+            <div class="col-lg-2">
+                 <div class="box_count">
+                     <i class="fa-solid fa-users" style="color: #ee6c20;"></i>
+                   <div>
+                    <span data-purecounter-start="0" data-purecounter-end="400" data-purecounter-duration="2" class="purecounter"></span>
+                     <p>Our Clients</p>
+                  </div>
+               </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="box_count">
+                <i class="fa-solid fa-users" style="color: #15be56;"></i>
+              <div>
+               <span data-purecounter-start="0" data-purecounter-end="400" data-purecounter-duration="2" class="purecounter"></span>
+                <p>Our Clients</p>
+             </div>
+          </div>
+     </div>
+     <div class="col-lg-2">
+        <div class="box_count">
+            <i class="fa-solid fa-users" style="color: #bb0852;"></i>
+          <div>
+           <span data-purecounter-start="0" data-purecounter-end="400" data-purecounter-duration="2" class="purecounter"></span>
+            <p>Our Clients</p>
+         </div>
+      </div>
+ </div>
+ <div class="col-lg-2">
+    <div class="box_count">
+        <i class="fa-solid fa-users"></i>
+      <div>
+       <span data-purecounter-start="0" data-purecounter-end="400" data-purecounter-duration="2" class="purecounter"></span>
+        <p>Our Clients</p>
+     </div>
+  </div>
+</div>
+        </div>
       </article>
    </section>
 
