--- a/layout.html
+++ b/layout.html
@@ -56,9 +56,8 @@
                     <span style="--i:17"></span>
                  </div>
                 <a class="navbar-brand" href="##">Bizo</a>
-                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
+                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary  text-primary rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <i style="color:#4fc3dc" class="fas fa-bars"></i>
                 </button>
                 <div  class="collapse navbar-collapse justify-content-center mx-5" id="navbarResponsive">
                     <ul class="navbar-nav text-center  p-2">
