add faq and follow me

--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/image/intro.jpg" type="image/x-icon">
+    <link rel="icon" href="./assets/image/bizo.png" type="image">
     <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <title>BIZO</title>
+    <title>Bizo</title>
 </head>
 <body>
 
@@ -55,7 +55,7 @@
                     <span style="--i:28"></span>
                     <span style="--i:17"></span>
                  </div>
-                <a class="navbar-brand" href="##">Bizo</a>
+                <a class="navbar-brand" href="##"><img src="./assets/image/bizo.png" width="50px" height="50px" alt=""> </a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary  text-primary rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <i style="color:#4fc3dc" class="fas fa-bars"></i>
                 </button>
@@ -217,6 +217,74 @@
         </div>
       </article>
 
+       <article class="container py-5 mt-2 mb-5" data-aos="fade-up">
+          <div class="text-center fw-bolder">
+            <h2>F.A.Q</h2>
+            <p>Frequently Asked Questions</p>
+          </div>
+    <div class="row">
+        <div class="col-lg-6">
+        <div class="accordion accordion-flush text-center" id="faqlist2">
+            <div class="accordion-item ">
+              <h2 class="accordion-header text-center">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
+                 question 1 ?
+                </button>
+              </h2>
+              <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
+                <div class="accordion-body">
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, impedit.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header text-center">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-22">
+                  question 2?
+                </button>
+              </h2>
+              <div id="faq-content-22" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
+                <div class="accordion-body">
+                 Lorem ipsum dolor sit amet.
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="accordion accordion-flush text-center" id="faqlist1" >
+            <div class="accordion-item ">
+              <h2 class="accordion-header text-center">
+                <button class="accordion-button collapsed text-center" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
+                 question 3 ?
+                </button>
+              </h2>
+              <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
+                <div class="accordion-body">
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, impedit.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header text-center">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
+                  question 4?
+                </button>
+              </h2>
+              <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
+                <div class="accordion-body">
+                 Lorem ipsum dolor sit amet.
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    </div>
+       </article>
+
      <article class="thank py-4"  >
         <div class="row container-fluid justify-content-center gap-5" data-aos="fade-down" data-aos-delay="500">
             <h3 class="fw-bolder text-center"  data-aos="fade-down" data-aos-delay="400">I’m so grateful for your help. Thank you 🤍</h3>
@@ -252,7 +320,27 @@
     </div>
       </article>
 
-        <article id="contact_us" class="contact py-5" data-aos="fade-up">
+      <article  class="py-2" data-aos="fade-up">
+        <div class="container py-5">
+                <div class="text-center py-4">
+                    <h2 class="section-heading text-uppercase">U wanna know us</h2>
+                    <h3 class="section-subheading text-muted">Front-End Developer</h3>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-12 text-center py-3">
+                            <img class="rounded-circle img-thumbnail shadow-sm" width="30%" height="30%" src="./assets/image/talelmejri.jpg" alt="..." />
+                            <h4>Talel Mejri</h4>
+                            <p class="text-muted">Fllow Me.</p>
+                              <a class="btn   mx-2" href="#!"><i class="fa-brands fa-youtube"></i></a>
+                              <a class="btn   mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                              <a class="btn   mx-2" href="#!" ><i class="fab fa-facebook-f"></i></a>
+                              <a class="btn   mx-2" href="#!" ><i class="fab fa-linkedin-in"></i></a>
+                   </div>
+                </div>
+       </div>
+    </article>
+
+    <article id="contact_us" class="contact py-1" data-aos="fade-up">
             <div class="container py-5">
                         <div class="text-center py-4">
                             <h2 class=" text-uppercase">Contact Us</h2>
@@ -319,7 +407,7 @@
                       </div>  
                       </form>
                   </div>
-            </article>
+       </article>
 
    </section>
 
@@ -374,6 +462,8 @@
 <script src="./assets/vendor/aos/aos.js"></script>
 <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="./assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
