fix email and link base de donneé

--- a/layout.html
+++ b/layout.html
@@ -345,19 +345,19 @@
                         <div class="text-center py-4">
                             <h2 class=" text-uppercase">Contact Us</h2>
                         </div>
-                     <form action="#" method="post" class="shadow p-4 m-3 rounded">
+                     <form action="contact_us.php" method="post" class="shadow p-4 m-3 rounded">
                       <h4 class="fw-bolder text-primary">Get In Touch</h4>
                       <p class="text-muted-primary">we are here for you ! how can we help ?</p>
                      <div class="row">
                        <div class="col-lg-6">
                       <div class="mb-3">
-                        <input  type="name" name="name" class="form-control shadow" placeholder="Entre your name"  >
+                        <input  type="name" name="name" required class="form-control shadow" placeholder="Entre your name"  >
                       </div>
                       <div class="mb-3">
-                          <input type="email" name="email" placeholder="Entrer your email address" class="shadow form-control shadow" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                          <input type="email" name="email" required placeholder="Entrer your email address" class="shadow form-control shadow" id="exampleInputEmail1" aria-describedby="emailHelp" >
                       </div>
                       <div class="mb-3">
-                      <textarea placeholder="Go ahead , we are listening" class="shadow rounded" style="outline:none;border:none;padding:10px" name="messages" cols="20"  rows="10"  ></textarea>
+                      <textarea placeholder="Go ahead , we are listening" required class="shadow rounded" style="outline:none;border:none;padding:10px" name="messages" cols="20"  rows="10"  ></textarea>
                     </div>
                         <button style="width:100%" name="submit" type="submit" class="mb-4 btn">Send</button>
                         </div>  
